--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,5 @@ dependencies {
     implementation 'com.github.MdFarhanRaja:SearchableSpinner:2.0'
     implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
 
-
+    implementation 'com.airbnb.android:lottie:3.7.0'
 }
