--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,8 @@ android {
         applicationId "com.carusoft.skill"
         minSdk 24
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
-
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -74,6 +73,8 @@ dependencies {
     implementation 'com.github.mudassar1:SearchableSpinner:v1.1'
     implementation 'com.github.MdFarhanRaja:SearchableSpinner:2.0'
     implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
+
+    implementation 'com.google.android.gms:play-services-vision:20.1.0'
 
     implementation 'com.airbnb.android:lottie:3.7.0'
 }
